<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="articles_search_results_list_fragment_contact_us">Contact support</string>
    <string name="articles_search_results_list_fragment_error_message">Something went wrong</string>
    <string name="articles_search_results_list_fragment_no_articles_found">No results found</string>
    <string name="attachment_add_menu">Attachments</string>
    <string name="attachment_select_source_choose_existing">Choose existing</string>
    <string name="attachment_select_source_new_photo">Take a photo</string>
    <string name="attachment_upload_error_cancel">Cancel</string>
    <string name="attachment_upload_error_file_already_added">File already added</string>
    <string name="attachment_upload_error_file_not_found">File not found</string>
    <string name="attachment_upload_error_file_too_big">Max attachment size is %s</string>
    <string name="attachment_upload_error_try_again">Try again</string>
    <string name="attachment_upload_error_upload_failed">Attachment failed to upload</string>
    <string name="categories_list_fragment_error_message">Failed to get categories</string>
    <string name="categories_list_fragment_no_categories_found">No categories found</string>
    <string name="contact_fragment_description_hint">Description</string>
    <string name="contact_fragment_email_hint">Email</string>
    <string name="contact_fragment_email_validation_error">Incorrect email address</string>
    <string name="contact_fragment_send_button_label">Send</string>
    <string name="contact_fragment_title">Contact DragonSoul Support</string>
    <string name="network_activity_no_connectivity">No connection</string>
    <string name="rate_my_app_dialog_dismiss_action_label">Don\'t ask me again</string>
    <string name="rate_my_app_dialog_feedback_description_label">We want to make it better. Please tell us about any issues you\'re having.</string>
    <string name="rate_my_app_dialog_feedback_device_api_version">OS API: %1$d</string>
    <string name="rate_my_app_dialog_feedback_device_memory">Memory: %1$sMB / %2$sMB</string>
    <string name="rate_my_app_dialog_feedback_device_model">Model: %1$s</string>
    <string name="rate_my_app_dialog_feedback_device_name">Device: %1$s</string>
    <string name="rate_my_app_dialog_feedback_device_os_version">OS version: %1$s</string>
    <string name="rate_my_app_dialog_feedback_request_subject">App feedback</string>
    <string name="rate_my_app_dialog_feedback_send_error_no_connectivity_toast">No connection</string>
    <string name="rate_my_app_dialog_feedback_send_error_toast">There was an error, please try again</string>
    <string name="rate_my_app_dialog_feedback_send_success_toast">Thank you for contacting us</string>
    <string name="rate_my_app_dialog_feedback_title_label">Sorry about that</string>
    <string name="rate_my_app_dialog_negative_action_label">No, send feedback</string>
    <string name="rate_my_app_dialog_positive_action_label">Yes, rate our app</string>
    <string name="rate_my_app_dialog_title_label">Are you happy with our app?</string>
    <string name="rate_my_app_dialogue_feedback_cancel_button_label">Cancel</string>
    <string name="rate_my_app_dialogue_feedback_issue_hint">Describe your issue</string>
    <string name="rate_my_app_dialogue_feedback_send_button_label">Send feedback</string>
    <string name="request_list_activity_title">My tickets</string>
    <string name="request_list_fragment_error_message">Failed to get tickets</string>
    <string name="request_list_fragment_no_requests">No tickets currently open</string>
    <string name="request_view_comment_entry_hint">Comment</string>
    <string name="retry_view_button_label">Retry</string>
    <string name="row_request_unread_indicator_alt">Icon indicating that there are unread comments</string>
    <string name="sections_list_fragment_error_message">Failed to get sections</string>
    <string name="sections_list_fragment_no_sections_found">No sections found</string>
    <string name="support_activity_title">Support</string>
    <string name="support_activity_unable_to_contact_support">Unable to contact support</string>
    <string name="support_contact_menu">Contact</string>
    <string name="support_conversations_menu">Conversations</string>
    <string name="support_list_search_hint">How can we help?</string>
    <string name="view_article_attachments_error">Failed to fetch attachments</string>
    <string name="view_article_seperator">•</string>
    <string name="view_request_agent_avatar_imageview_alt">Agent\'s avatar</string>
    <string name="view_request_load_comments_error">Failed to load comments</string>
    <string name="view_request_send_comment_error">Failed to send comment</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="app_id">915511809254</string>
    <string name="app_name">DragonSoul</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_dialog_unknown">Unknown</string>
    <string name="belvedere_sample_camera">@string/attachment_select_source_new_photo</string>
    <string name="belvedere_sample_gallery">@string/attachment_select_source_choose_existing</string>
    <string name="belvedere_sdk_fpa_suffix">.belvedere.attachments</string>
    <string name="build_time">火, 29 1 2019 3:59:46 午後</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="contact_fragment_request_subject">App Ticket</string>
    <string name="default_notification_channel_description">Receives notification from DragonSoul such as Full Skill Points, Collectable Stamina and Guild War etc.</string>
</resources>